Closed
Bug 1234966
Opened 9 years ago
Closed 9 years ago
ASSERTION: CalcDifference() returned bigger hint than MaxDifference(): 'NS_IsHintSubset(difference, maxDifference)'
Categories
(Core :: CSS Parsing and Computation, defect)
Tracking
()
RESOLVED
FIXED
mozilla46
Tracking | Status | |
---|---|---|
firefox46 | --- | fixed |
People
(Reporter: hiro, Unassigned)
References
Details
Attachments
(1 file)
https://treeherder.mozilla.org/logviewer.html#?job_id=14811005&repo=try
01:25:54 INFO - [Parent 2113] ###!!! ASSERTION: CalcDifference() returned bigger hint than MaxDifference(): 'NS_IsHintSubset(difference, maxDifference)', file /builds/slave/try-l64-d-00000000000000000000/build/src/layout/style/nsStyleContext.cpp, line 908
01:26:58 INFO - #01: mozilla::ElementRestyler::CaptureChange(nsStyleContext*, nsStyleContext*, nsChangeHint, unsigned int*, unsigned int*) [layout/base/RestyleManager.cpp:2755]
01:26:58 INFO - #02: mozilla::ElementRestyler::RestyleSelf(nsIFrame*, nsRestyleHint, unsigned int*, nsTArray<mozilla::ElementRestyler::SwapInstruction>&) [layout/base/RestyleManager.cpp:4107]
01:26:58 INFO - #03: mozilla::ElementRestyler::Restyle(nsRestyleHint) [layout/base/RestyleManager.cpp:3285]
01:26:58 INFO - #04: mozilla::ElementRestyler::RestyleContentChildren(nsIFrame*, nsRestyleHint) [layout/base/RestyleManager.cpp:4861]
01:26:58 INFO - #05: mozilla::ElementRestyler::RestyleChildren(nsRestyleHint) [layout/base/RestyleTracker.cpp:509]
01:26:58 INFO - #06: mozilla::ElementRestyler::Restyle(nsRestyleHint) [layout/base/RestyleManager.cpp:3439]
01:26:58 INFO - #07: mozilla::ElementRestyler::RestyleContentChildren(nsIFrame*, nsRestyleHint) [layout/base/RestyleManager.cpp:4861]
01:26:58 INFO - #08: mozilla::ElementRestyler::RestyleChildren(nsRestyleHint) [layout/base/RestyleTracker.cpp:509]
01:26:58 INFO - #09: mozilla::ElementRestyler::Restyle(nsRestyleHint) [layout/base/RestyleManager.cpp:3439]
01:26:58 INFO - #10: mozilla::ElementRestyler::RestyleContentChildren(nsIFrame*, nsRestyleHint) [layout/base/RestyleManager.cpp:4861]
01:26:58 INFO - #11: mozilla::ElementRestyler::RestyleChildren(nsRestyleHint) [layout/base/RestyleTracker.cpp:509]
01:26:58 INFO - #12: mozilla::ElementRestyler::Restyle(nsRestyleHint) [layout/base/RestyleManager.cpp:3439]
01:26:58 INFO - #13: mozilla::ElementRestyler::ComputeStyleChangeFor(nsIFrame*, nsStyleChangeList*, nsChangeHint, mozilla::RestyleTracker&, nsRestyleHint, mozilla::RestyleHintData const&, nsTArray<mozilla::ElementRestyler::ContextToClear>&, nsTArray<RefPtr<nsStyleContext> >&) [layout/base/RestyleManager.cpp:4525]
01:26:58 INFO - #14: mozilla::RestyleManager::ComputeAndProcessStyleChange(nsIFrame*, nsChangeHint, mozilla::RestyleTracker&, nsRestyleHint, mozilla::RestyleHintData const&) [layout/base/RestyleManager.cpp:4937]
01:26:58 INFO - #15: mozilla::RestyleManager::RestyleElement(mozilla::dom::Element*, nsIFrame*, nsChangeHint, mozilla::RestyleTracker&, nsRestyleHint, mozilla::RestyleHintData const&) [layout/base/RestyleManager.cpp:1053]
01:26:58 INFO - #16: mozilla::RestyleTracker::ProcessOneRestyle(mozilla::dom::Element*, nsRestyleHint, nsChangeHint, mozilla::RestyleHintData const&) [layout/base/RestyleTracker.cpp:195]
01:26:58 INFO - #17: mozilla::RestyleTracker::DoProcessRestyles() [layout/base/RestyleTracker.cpp:354]
01:26:58 INFO - #18: mozilla::RestyleManager::ProcessPendingRestyles() [layout/base/RestyleManager.cpp:1777]
01:26:58 INFO - #19: PresShell::FlushPendingNotifications(mozilla::ChangesToFlush) [layout/base/nsPresShell.cpp:4071]
01:26:58 INFO - #20: nsRefreshDriver::Tick(long, mozilla::TimeStamp) [mfbt/RefPtr.h:240]
01:26:58 INFO - #21: mozilla::RefreshDriverTimer::TickRefreshDrivers(long, mozilla::TimeStamp, nsTArray<RefPtr<nsRefreshDriver> >&) [layout/base/nsRefreshDriver.cpp:237]
01:26:58 INFO - #22: mozilla::RefreshDriverTimer::Tick(long, mozilla::TimeStamp) [layout/base/nsRefreshDriver.cpp:258]
01:26:58 INFO - #23: mozilla::VsyncRefreshDriverTimer::RefreshDriverVsyncObserver::TickRefreshDriver(mozilla::TimeStamp) [layout/base/nsRefreshDriver.cpp:489]
Reporter | ||
Comment 1•9 years ago
|
||
Review commit: https://reviewboard.mozilla.org/r/29013/diff/#index_header
See other reviews: https://reviewboard.mozilla.org/r/29013/
Attachment #8701656 -
Flags: review?(cam)
Updated•9 years ago
|
Attachment #8701656 -
Flags: review?(cam) → review+
Comment 2•9 years ago
|
||
Comment on attachment 8701656 [details]
MozReview Request: Bug 1234966 - nsStylePosition::MaxDifference should include nsChangeHint_NeutralChange because CalcDiffrence returns it. r?heycam
https://reviewboard.mozilla.org/r/29013/#review25831
Reporter | ||
Comment 3•9 years ago
|
||
Keywords: checkin-needed
Keywords: checkin-needed
Comment 5•9 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 9 years ago
status-firefox46:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla46
You need to log in
before you can comment on or make changes to this bug.
Description
•