Bug 1234966 - nsStylePosition::MaxDifference should include nsChangeHint_NeutralChange because CalcDiffrence returns it. r=heycam

--HG--
extra : commitid : FVjhKfDcAUz