layout/style/nsStyleStruct.h
@@ -1418,7 +1418,8 @@ struct nsStylePosition {
                               const nsStyleVisibility* aOldStyleVisibility) const;
   static nsChangeHint MaxDifference() {
     return NS_CombineHint(NS_STYLE_HINT_REFLOW,
-                          nsChangeHint(nsChangeHint_RecomputePosition |
+                          nsChangeHint(nsChangeHint_NeutralChange |
+                                       nsChangeHint_RecomputePosition |
                                        nsChangeHint_UpdateParentOverflow |
                                        nsChangeHint_UpdateComputedBSize));
   }
